# GOL

./: .gitignore  .gitmodules  CMakeLists.txt  GOL.py  GOL.vcxproj  GameOfLife  Makefile  README.md  main.lua
C++_ScreenSaver/: GOL.sln
C++_ScreenSaver/Headers/: GOL.hpp  Gen_Shape.hpp
C++_Terminal/: Compile_for_Windows.bat
C++_Terminal/Headers/: Gen_Shape.hpp
GameOfLife/GameOfLife/GameOfLife/: GameOfLife.csproj
Headers/: App.hpp  Camera.hpp  Cell.hpp  Chunk.hpp  GOL.hpp  Gen_Shape.hpp  ScreenRenderer.hpp  Types.hpp  Utils.hpp  terminal.h
Headers/Core/: Types.hpp
Headers/Maths/: Maths.hpp  Maths.inl
Headers/UI/: Button.hpp
Lua_Terminal/: Launch.bat
Lua_Terminal/Sources/: GOL.lua  GenShape.lua
Python_Terminal/: .gitignore
Python_Terminal/Sources/: GOL.py  Gen_Shape.py
Sources/: App.cpp  Camera.cpp  Cell.cpp  Chunk.cpp  GOL.cpp  ScreenRenderer.cpp  ScreenSaver.cpp  Terminal.lua  main.cpp  terminal.py
Sources/Maths/: Maths.cpp
Sources/UI/: Button.cpp
src/: GOL.cpp  GOL.d  GOL.hpp  main.cpp  main.d
